--- a/i3/.config/i3status/config
+++ b/i3/.config/i3status/config
@@ -37,8 +37,8 @@ cpu_usage {
 
 cpu_temperature 0 {
     format = ""
+    path = "/sys/class/hwmon/hwmon6/temp1_input"
     format_above_threshold = "T: %degrees °C"
-    path = "/sys/devices/platform/coretemp.0/hwmon/hwmon3/temp1_input"
 }
 
 memory {
